# IED3

./: CMakeLists.txt  Notes.md  README.md  main.cpp
include/: ArgumentParse.hpp
include/Args/: ArgumentParse.hpp  Id3.hpp  Id3v1.hpp  Id3v2.hpp
src/: ArgumentParse.cpp  Id3.cpp  Id3v1.cpp  id3v2.cpp
